// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpIcon classNames api passes class name to the icon 1`] = `
<svg
  class="an-icon-class"
  height="18"
  role="img"
  width="18"
>
  <title>
    Icon Label
  </title>
  <use
    xlink:href="#help.svg"
  />
</svg>
`;

exports[`HelpIcon classNames api passes class name to tooltip 1`] = `
<span
  class="a-tooltip-class top"
  id="help-tooltip"
  style="--triangle-height: 8px; left: 0px; top: -128px;"
>
  Help Text
</span>
`;

exports[`HelpIcon direction api allows bottom 1`] = `
<body>
  <div>
    <div
      aria-describedby="help-tooltip"
    />
  </div>
  <div>
    <div
      class="wrapper"
      tabindex="0"
    >
      <svg
        height="18"
        role="img"
        width="18"
      >
        <title>
          Icon Label
        </title>
        <use
          xlink:href="#help.svg"
        />
      </svg>
    </div>
  </div>
  <span
    class="tooltip bottom"
    id="help-tooltip"
    style="--triangle-height: 8px; left: 0px; top: 128px;"
  >
    Help Text
  </span>
</body>
`;

exports[`HelpIcon direction api allows left 1`] = `
<body>
  <div>
    <div
      aria-describedby="help-tooltip"
    />
  </div>
  <div>
    <div
      class="wrapper"
      tabindex="0"
    >
      <svg
        height="18"
        role="img"
        width="18"
      >
        <title>
          Icon Label
        </title>
        <use
          xlink:href="#help.svg"
        />
      </svg>
    </div>
  </div>
  <span
    class="tooltip left"
    id="help-tooltip"
    style="--triangle-height: 8px; left: -128px; top: 0px;"
  >
    Help Text
  </span>
</body>
`;

exports[`HelpIcon direction api allows right 1`] = `
<body>
  <div>
    <div
      aria-describedby="help-tooltip"
    />
  </div>
  <div>
    <div
      class="wrapper"
      tabindex="0"
    >
      <svg
        height="18"
        role="img"
        width="18"
      >
        <title>
          Icon Label
        </title>
        <use
          xlink:href="#help.svg"
        />
      </svg>
    </div>
  </div>
  <span
    class="tooltip right"
    id="help-tooltip"
    style="--triangle-height: 8px; left: 128px; top: 0px;"
  >
    Help Text
  </span>
</body>
`;

exports[`HelpIcon direction api allows top 1`] = `
<body>
  <div>
    <div
      aria-describedby="help-tooltip"
    />
  </div>
  <div>
    <div
      class="wrapper"
      tabindex="0"
    >
      <svg
        height="18"
        role="img"
        width="18"
      >
        <title>
          Icon Label
        </title>
        <use
          xlink:href="#help.svg"
        />
      </svg>
    </div>
  </div>
  <span
    class="tooltip top"
    id="help-tooltip"
    style="--triangle-height: 8px; left: 0px; top: -128px;"
  >
    Help Text
  </span>
</body>
`;

exports[`HelpIcon has defaults 1`] = `
<body>
  <div>
    <div
      aria-describedby="help-tooltip"
    />
  </div>
  <div>
    <div
      class="wrapper"
      tabindex="0"
    >
      <svg
        height="18"
        role="img"
        width="18"
      >
        <title>
          Icon Label
        </title>
        <use
          xlink:href="#help.svg"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`HelpIcon has defaults 2`] = `
<body>
  <div>
    <div
      aria-describedby="help-tooltip"
    />
  </div>
  <div>
    <div
      class="wrapper"
      tabindex="0"
    >
      <svg
        height="18"
        role="img"
        width="18"
      >
        <title>
          Icon Label
        </title>
        <use
          xlink:href="#help.svg"
        />
      </svg>
    </div>
  </div>
  <span
    class="tooltip top"
    id="help-tooltip"
    style="--triangle-height: 8px; left: 0px; top: -128px;"
  >
    Help Text
  </span>
</body>
`;
